css/style.css
/* ... */
.input-group {
  flex: 1; 
}
input, textarea {
  width: 100%;
  padding: 8px;
}

aside {
    flex: 2;
    align-self: center;
}
section {
    flex: 2;
}

h1{
    text-align: center;
    text-decoration: underline;
}
h3{
    text-align: center;
    padding: 5px;
    text-decoration: underline;
}

.destination-box {/* GRID FOR ALL DESTINATION CARDS */
    display: flex;
    flex-wrap: wrap;
    gap: 10px;      
    padding: 0 20px;
    justify-content: center;
    max-width: 1200px;
    margin: 0 auto;
}
.destination-card {/* GREY CARD BOX AROUND EACH IMAGE AND TEXT */
    background-color: #F5F4F0;
    flex: 0 0 calc((100% - 30px) / 4); /* 4 CARDS PER ROW WITH GAP */
    padding: 10px;
    border-radius: 8px;
    box-shadow: 1 10px 20px rgba(0, 0, 0, 0.1); /* SHADOW FOR 3D CARD EFFECT */
    text-align: center; /* CENTER TEXT WITHIN THE CARD BUT ONLY FOR THE CITY AND COUNTRY*/
    border-bottom: 0.3px solid #c4ccff;
}

.destination-card img:hover {
    transform: translateY(-5px); /* LIFT EFFECT ON HOVER */
    box-shadow: 1 15px 25px rgba(0, 0, 0, 0.2); /* ENHANCED SHADOW ON HOVER */
    cursor: pointer;
}

.destination-card img {/* IMAGE FORMATTING */
    width: 250px;
    height: 300px;
    border-radius: 8px; /* ROUND BOARDERS */
}
.destination-card p {/* FORMATTING TEXT TO LOOK DIFFERENT TO CITY AND COUNTRY */
    font-size: 16px;
    color: #333;
    text-align: justify;
}

.line { /* SUB-CONTAINER FOR PRICE AND DAYS */
    display: flex;
    justify-content: space-between;
}

.destination-price { /* PRICE FORMATTING */
    font-size: 18px;
    color: #3882F6;
    font-weight: bold;
}
.destination-days { /* DAYS FORMATTING */
    font-size: 14px;
    color: #333;
    font-style: italic;
    font-weight: 300;
}

.destination-card button {
    width:fit-content;
    padding: 12px 24px;
    border: none;
    border-radius: 8px;
    background: #3882f6;
    color: #f9faf8;
    font-weight: bold;
    cursor: pointer;
    transition: 0.3s;
    margin-top: 10px;
}

.destination-card button:hover {
    background: #2a74eb;
}

/*===========================================*/
/* -------------SIGN UP PAGE--------------  */
/*===========================================*/

.sign-up-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    width: 100%;
    max-width: 1200px;
    min-height: 80vh;
    margin: 40px auto;
    padding: 0;
    align-items: center;
    flex-wrap: wrap;
    gap: 20px;
}

.sign-up-container article {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;

}

.sign-up-card p {
    font-size: 16px;
    text-align: center;
    color: #ffffff;
}

input {
    padding: 10px;
    width: 100%;
    height: 50px;
    margin-top: 20px;
}

.sign-up-card{
    background-color: #1f2937;
    color: #ffffff;
    padding: 20px;
    border-radius: 8px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    display: flex;
    flex-direction: column;
    min-height: auto;
    width: 100%;
}
.sign-up-card h2 {
    text-align: center;
    text-decoration: underline;
}

.sign-up-card button {
    width:fit-content;
    padding: 12px 24px;
    border: none;
    border-radius: 8px;
    background: #3882f6;
    color: #f9faf8;
    font-weight: bold;
    cursor: pointer;
    transition: 0.3s;
    margin-top: 20px;
}
.sign-up-card article {
    align-items: center;
}

#card-signup {
    border-right: 1px solid #c4ccff;
    padding-right: 40px;
}
.name-row {
    display: flex;
    gap: 20px;
}

.input-group {
    flex: 1; 
    display: flex;
    flex-direction: column;
}

/*===========================================*/
/* -------------FOOTER--------------  */
/*===========================================*/

footer {
    background-color: #1f2937;
    color: #f9faf8;
    font-size: 18px;
    font-weight: lighter;
}

footer .container {
    justify-content: center;
}

/*===========================================*/
/* -------------BACK TO TOP--------------  */
/*===========================================*/

.back-to-top {
    position: fixed;
    bottom: 20px;
    right: 20px;
    background-color: ghostwhite;
    border: 1px solid #000000;
    color: white;
    padding: 7px 7px;
    border-radius: 8px;
    cursor: pointer;
    text-decoration: none;
    width: 40px;
    height: 40px;
}

.back-to-top:hover {
    background-color: #dcf6f3;
}


/*===========================================*/
/* -------------MEDIA QUERIES--------------  */
/*===========================================*/

/* Media Query for 768px Landing Page */
@media (max-width: 768px) {
    
    .main-hero-right {
        display: none;
    }

    .main-hero-left {
        display: flex;
        flex-direction: column;
        align-items: center;    
        text-align: center;     
        width: 100%;     
    }

    .main-hero-left h1 {
        text-align: center;
    }

    .main-hero-container {
        justify-content: center;
        padding: 0 20px;
    }

    .random-info-heading {
        text-align: center;
    }

    .quote-landing-page {
        max-width: 100%;
    }

    .quote-landing-page-top{
        font-size: 24px;
    }

    .promo-boxes-landing-page {
        max-width: 80%;
        flex-wrap: wrap;
    }

    .promo-boxes img {
        max-width: 20%;
    }

    .promo-boxes h4 {
        max-width: 80%;
    }

    .promo-boxes p {
        max-width: 100%;
    }
}

/* Media Query for 768px About Page */
@media (max-width: 768px) {
    
    .main-about-page {
        flex-wrap: wrap;
    }

    .main-about-page-top {
        flex-wrap: wrap;
        text-align: center;
    }

    .main-about-page-bottom {
        flex-direction: column-reverse;
        text-align: center;
    }
}
/* ... */

